[FIX] mail: fully show message action list in chat window
Before this commit, squashed messages in chat window had part of
the action list being cut by the message above.

This comes from `overflow-auto` on the message content, which was
defined to make content shrink, but had the unintended side-effect
of cutting the message action list for squashed messages in chat
window.

This commit fixes the solution by using `min-width: 0;` instead to
shrink flex item to lower of content width. This style-rule works
like setting `overflow-auto` without actually affecting overflow.

closes odoo/odoo#123178

--- a/addons/mail/static/src/discuss_app/im_status.scss
+++ b/addons/mail/static/src/discuss_app/im_status.scss
@@ -7,7 +7,3 @@
         color: $yellow;
     }
 }
-
-.o-bg-inherit {
-    background-color: inherit;
-}
